Added start/reset button. Fixed computer makes move after user wins

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1 class="title">Tic Tac Toe</h1>
-    <div class="cell-container">
+    <div class="cell-container hide">
         <div id="0"></div>
         <div id="1"></div>
         <div id="2"></div>
@@ -27,5 +27,7 @@
         <p id="win-message"></p>
         <button autofocus id="restart-btn">Restart</button>
     </dialog>
+    <button id="start-btn">Start</button>
+    <button id="reset-btn" class="hide">Reset</button>
 </body>
 </html>
